fixed spinner, footer, and tried to make the website actually viewable on mobile

--- a/style.css
+++ b/style.css
@@ -72,8 +72,10 @@
 /* body */
 
 body {
+  padding: var(--padding);
+  box-sizing: border-box;
   margin: 0;
-  height: 100vh;
+  min-height: 100dvh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -89,6 +91,7 @@ body {
 
 .card {
   display: flex;
+  transform-origin: center;
   flex-direction: column;
   align-items: center;
   text-align: center;
@@ -233,6 +236,13 @@ body {
 }
 
 .card .subCount h1 {
+  mask-image: linear-gradient(
+    to bottom,
+    transparent 0%,
+    black 25%,
+    black 75%,
+    transparent 100%
+  );
   margin: 0;
   font-size: 33px;
   padding-right: var(--margin);
@@ -250,14 +260,18 @@ body {
 }
 
 .card .subCount .spinner {
-  font-size: 30px;
+  width: 60px;
+  height: 60px;
+  align-content: center;
+  text-align: center;
+  font-size: 33px;
   animation: spin 1s linear infinite;
 }
 
 /* footer */
 
 .lastUpdated {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   margin: 0 0 var(--margin) var(--margin);
